@@ -1,7 +1,7 @@
 #  File src/library/stats/R/tukeyline.R
 #  Part of the R package, https://www.R-project.org
 #
-#  Copyright (C) 1995-2016 The R Core Team
+#  Copyright (C) 1995-2017 The R Core Team
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -16,13 +16,14 @@
 #  A copy of the GNU General Public License is available at
 #  https://www.R-project.org/Licenses/
 
-line <- function(x, y = NULL)
+line <- function(x, y = NULL, iter = 1)
 {
     xy <- xy.coords(x, y, setLab = FALSE)
     ok <- complete.cases(xy$x,xy$y)
     Call <- sys.call()
     structure(.Call(C_tukeyline, as.double(xy$x[ok]), as.double(xy$y[ok]),
-                    Call), class = "tukeyline")
+		    as.integer(iter), Call),
+	      class = "tukeyline")
 }
 residuals.tukeyline <- residuals.lm
 print.tukeyline <- print.lm
