@@ -165,7 +165,7 @@ SEXP call_dqagi(SEXP);
 SEXP call_dqags(SEXP);
 
 SEXP Rsm(SEXP x, SEXP stype, SEXP send);
-SEXP tukeyline(SEXP x, SEXP y, SEXP call);
+SEXP tukeyline(SEXP x, SEXP y, SEXP iter, SEXP call);
 SEXP runmed(SEXP x, SEXP stype, SEXP sk, SEXP end, SEXP print_level);
 SEXP influence(SEXP mqr, SEXP do_coef, SEXP e, SEXP stol);
 
